<resources>
    <string name="app_name">计算器</string>
    <string name="menu_settings">退出</string>
    <string name="title_activity_calculator">计算器</string>
    <string name="show"></string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="equal">=</string>
    <string name="plusOrminus">+/-</string>
    <string name="decimalpoint">.</string>
    <string name="square">x²</string>
    <string name="radicals">√x</string>
    <string name="clears">清屏</string>
    <string name="clearAll">全清</string>

</resources>