<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/zhengfu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="#ff808080"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_show"
        android:gravity="right|center_vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:layout_marginTop="4dip"
        android:layout_weight="1.5"
        android:cursorVisible="false"
        android:hint="@string/show"
        android:textColor="#000000"
        android:singleLine="true"
        android:textSize="25sp" >
    </EditText>

    <TableLayout
        android:id="@+id/tablelayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dip"
        android:layout_weight="10" >

        <LinearLayout
            android:id="@+id/linearlayout02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btnClears"
                android:layout_width="50dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/clears"
                android:textSize="25sp" >
            </Button>

            <Button
                android:id="@+id/btnClearAll"
                android:layout_width="50dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/clearAll"
                android:textSize="25sp" >
            </Button>
        </LinearLayout>

        <TableRow
            android:id="@+id/row0"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btnOne"
                android:layout_width="40dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/one"
                android:textSize="25sp" >
            </Button>

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="40dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/two"
                android:textSize="25sp" >
            </Button>

            <Button
                android:id="@+id/btnThree"
                android:layout_width="40dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/three"
                android:textSize="25sp" >
            </Button>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="40dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/add"
                android:textSize="25sp" >
            </Button>
        </TableRow>

        <TableRow
            android:id="@+id/row1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btnFour"
                android:layout_width="40dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/four"
                android:textSize="25sp" >
            </Button>

            <Button
                android:id="@+id/btnFive"
                android:layout_width="40dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/five"
                android:textSize="25sp" >
            </Button>

            <Button
                android:id="@+id/btnSix"
                android:layout_width="40dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/six"
                android:textSize="25sp" >
            </Button>

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="40dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textSize="25sp" >
            </Button>
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="40dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/seven"
                android:textSize="25sp" >
            </Button>

            <Button
                android:id="@+id/btnEight"
                android:layout_width="40dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/eight"
                android:textSize="25sp" >
            </Button>

            <Button
                android:id="@+id/btnNine"
                android:layout_width="40dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/nine"
                android:textSize="25sp" >
            </Button>

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="40dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/multiply"
                android:textSize="25sp" >
            </Button>
        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btnZero"
                android:layout_width="40dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textSize="25sp" >
            </Button>

            <Button
                android:id="@+id/btnPoint"
                android:layout_width="40dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/decimalpoint"
                android:textSize="25sp" >
            </Button>

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="40dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/equal"
                android:textSize="25sp" >
            </Button>

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="40dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/divide"
                android:textSize="25sp" >
            </Button>
        </TableRow>

        <LinearLayout
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnPlusOrMinus"
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/plusOrminus"
                android:textSize="25sp" >
            </Button>

            <Button
                android:id="@+id/btnSquare"
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/square"
                android:textSize="25sp" >
            </Button>

            <Button
                android:id="@+id/btnRadicals"
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/radicals"
                android:textSize="25sp" >
            </Button>
        </LinearLayout>
    </TableLayout>

</LinearLayout>